--- a/.github/workflows/pipeline-CI.yaml
+++ b/.github/workflows/pipeline-CI.yaml
@@ -1,31 +1,25 @@
-name: CI/CD - pipeline
+name: CI/CD - Energia (Docker, uma branch)
 
 on:
   pull_request:
-    branches: [ "*" ]
+    branches: [ "master" ]         # testa PRs para main
   push:
-    branches: [ "beta" ]
+    branches: [ "master" ]         # CD completo só em push na main
 
 env:
-  WORKDIR: energia
+  WORKDIR: energia/energia
   JAVA_VERSION: '21'
+  DEPLOY_BRANCH: 'master'
   DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/energia
-
-concurrency:
-  group: cd-${{ github.ref }}
-  cancel-in-progress: false
 
 jobs:
   build-and-test:
     name: Build & Test (Maven)
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up JDK
-        uses: actions/setup-java@v4
+      - uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: ${{ env.JAVA_VERSION }}
@@ -43,29 +37,16 @@ jobs:
           path: ${{ env.WORKDIR }}/target/surefire-reports/*
           if-no-files-found: ignore
 
-      - name: Package (JAR)
-        working-directory: ${{ env.WORKDIR }}
-        run: mvn -B -ntp -DskipTests=false clean package
-
-      - name: Upload build artifact (JAR)
-        uses: actions/upload-artifact@v4
-        with:
-          name: energia-jar
-          path: ${{ env.WORKDIR }}/target/*.jar
-          if-no-files-found: error
-
   dockerize-and-push:
     name: Build & Push Docker
     needs: build-and-test
-    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+    if: ${{ github.event_name == 'push' && github.ref_name == env.DEPLOY_BRANCH }}
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -82,9 +63,9 @@ jobs:
         with:
           images: ${{ env.DOCKER_IMAGE }}
           tags: |
-            type=ref,event=branch,suffix=-staging   # ex.: refs-heads-main-staging (staging)
-            type=sha,prefix=sha-,format=long         # ex.: sha-<commit> (produção)
-            type=raw,value=latest                    # latest opcional
+            type=raw,value=${{ env.DEPLOY_BRANCH }}-staging      # ex.: main-staging (staging)
+            type=sha,prefix=sha-,format=long                     # ex.: sha-<commit> (produção)
+            type=raw,value=latest                                # opcional
 
       - name: Build & Push image
         uses: docker/build-push-action@v6
@@ -96,31 +77,23 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
 
   deploy-staging:
-    name: Deploy Staging (Azure)
     needs: dockerize-and-push
-    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
     runs-on: ubuntu-latest
-    environment:
-      name: staging
     steps:
-      - name: Deploy to Azure (staging)
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: ${{ secrets.AZURE_WEBAPP_NAME_STAGING }}
-          publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE_STAGING }}
-          images: ${{ env.DOCKER_IMAGE }}:refs-heads-main-staging
+    - name: Deploy container (staging)
+      uses: azure/webapps-deploy@v3
+      with:
+        app-name: ${{ secrets.AZURE_WEBAPP_NAME_STAGING }}
+        publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE_STAGING }}
+        images: ${{ env.DOCKER_IMAGE }}:${{ env.DEPLOY_BRANCH }}-staging
 
   deploy-production:
-    name: Deploy Production (Azure)
     needs: deploy-staging
-    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
     runs-on: ubuntu-latest
-    environment:
-      name: production
     steps:
-      - name: Deploy to Azure (production)
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: ${{ secrets.AZURE_WEBAPP_NAME_PRODUCTION }}
-          publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE_PRODUCTION }}
-          images: ${{ env.DOCKER_IMAGE }}:sha-${{ github.sha }}
+    - name: Deploy container (prod)
+      uses: azure/webapps-deploy@v3
+      with:
+        app-name: ${{ secrets.AZURE_WEBAPP_NAME_PRODUCTION }}
+        publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE_PRODUCTION }}
+        images: ${{ env.DOCKER_IMAGE }}:sha-${{ github.sha }}
