--- a/.github/workflows/pipeline-CI.yaml
+++ b/.github/workflows/pipeline-CI.yaml
@@ -7,7 +7,7 @@ on:
     branches: [ "master" ]
 
 env:
-  WORKDIR: energia/energia
+  WORKDIR: energia/energia/Dockerfile
   JAVA_VERSION: '24'
   DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/energia
 
