--- a/.github/workflows/pipeline-CI.yaml
+++ b/.github/workflows/pipeline-CI.yaml
@@ -1,4 +1,4 @@
-name: CI/CD - Energia (Docker, uma branch)
+name: CI/CD - Energia (Docker, master)
 
 on:
   pull_request:
@@ -8,11 +8,10 @@ on:
 
 env:
   APP_DIR: energia/energia
-  DOCKER_BUILD_CONTEXT: .
   DOCKERFILE: energia/energia/Dockerfile
-  JAVA_VERSION: '24'
+  DOCKER_BUILD_CONTEXT: energia/energia
+  JAVA_VERSION: '21'
   DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/energia
-
 
 jobs:
   build-and-test:
@@ -20,6 +19,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Debug layout
+        run: |
+          pwd
+          ls -la
+          echo "---- energia ----"; ls -la energia || true
+          echo "---- energia/energia ----"; ls -la energia/energia || true
+          echo "---- Dockerfile exists? ----"; test -f "${{ env.DOCKERFILE }}" && echo "OK" || (echo "NOT FOUND" && exit 1)
 
       - uses: actions/setup-java@v4
         with:
@@ -36,7 +42,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: surefire-reports
-          path: ${{ env.WORKDIR }}/target/surefire-reports/*
+          path: ${{ env.APP_DIR }}/target/surefire-reports/*
           if-no-files-found: ignore
 
   dockerize-and-push:
@@ -65,9 +71,9 @@ jobs:
         with:
           images: ${{ env.DOCKER_IMAGE }}
           tags: |
-            type=raw,value=master-staging
-            type=sha,prefix=sha-,format=long
-            type=raw,value=latest
+            type=raw,value=master-staging           # tag para STAGING
+            type=sha,prefix=sha-,format=long        # tag imutável para PRODUÇÃO
+            type=raw,value=latest                   # opcional
 
       - name: Build & Push image
         uses: docker/build-push-action@v6
